@@ -32,3 +32,4 @@ New internal features:
 - use cpsdefault.pot as blacklist_pot 
 - Added LDAPUserGroupsFolder as a folder having subgroups support.
 - Implemented group deletion by calling userFolderDelGroups.
+- Implemented updateMemberDataFromSchema as found in NuxMetaDirectories.
